[gd_scene load_steps=10 format=3 uid="uid://10qt5brjuq0d"]

[ext_resource type="Script" path="res://scripts/lobby.gd" id="1_7divp"]
[ext_resource type="Script" path="res://scenes/screens/splash_screen.gd" id="2_e0c0o"]
[ext_resource type="ButtonGroup" uid="uid://dyv3rdacqb4yg" path="res://assets/lobby_character_button_group.tres" id="2_xug6l"]
[ext_resource type="Texture2D" uid="uid://wan51fq1a6q4" path="res://assets/images/button-adri-256x256.png" id="4_w1vhj"]
[ext_resource type="Texture2D" uid="uid://bwiw0xslrub0v" path="res://assets/images/button-adri-pressed-256x256.png" id="5_jgnex"]
[ext_resource type="Texture2D" uid="uid://dc8d4gtwknjsg" path="res://assets/images/button-jack-256x256.png" id="6_conkq"]
[ext_resource type="Texture2D" uid="uid://da5252tv5wssy" path="res://assets/images/button-jack-pressed-256x256.png" id="7_ks8dk"]
[ext_resource type="Script" path="res://scripts/matches.gd" id="7_lb23g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e1lhs"]
content_margin_left = 25.0

[node name="Lobby" type="Node2D"]
script = ExtResource("1_7divp")

[node name="SplashScreen" type="Node2D" parent="."]
script = ExtResource("2_e0c0o")

[node name="Label" type="Label" parent="SplashScreen"]
offset_left = 604.0
offset_top = 221.0
offset_right = 695.0
offset_bottom = 244.0
text = "ADRI + JACK"

[node name="Label2" type="Label" parent="SplashScreen"]
offset_left = 562.0
offset_top = 311.0
offset_right = 751.0
offset_bottom = 334.0
text = "ULTIMATE SMACKDOWN"

[node name="UI" type="MarginContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1278.0
offset_bottom = 589.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="RegisterContainer" type="VBoxContainer" parent="UI"]
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Header_HBoxContainer" type="HBoxContainer" parent="UI/RegisterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/RegisterContainer/Header_HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Enter your name to join"

[node name="ErrorMessageLabel" type="Label" parent="UI/RegisterContainer/Header_HBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.875489, 0.283952, 0.295381, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_e1lhs")
text = "This is an error!"

[node name="TextEdit" type="TextEdit" parent="UI/RegisterContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
placeholder_text = "nickname"
scroll_fit_content_height = true

[node name="HBoxContainer" type="HBoxContainer" parent="UI/RegisterContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="AdriButton" type="TextureButton" parent="UI/RegisterContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
toggle_mode = true
button_group = ExtResource("2_xug6l")
texture_normal = ExtResource("4_w1vhj")
texture_pressed = ExtResource("5_jgnex")
stretch_mode = 5

[node name="JackButton" type="TextureButton" parent="UI/RegisterContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
toggle_mode = true
button_group = ExtResource("2_xug6l")
texture_normal = ExtResource("6_conkq")
texture_pressed = ExtResource("7_ks8dk")

[node name="Button" type="Button" parent="UI/RegisterContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Join"

[node name="ConnectedUsersContainer" type="VBoxContainer" parent="UI"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="UI/ConnectedUsersContainer"]
layout_mode = 2
text = "Connected Users"

[node name="VBoxContainer" type="VBoxContainer" parent="UI/ConnectedUsersContainer"]
layout_mode = 2

[node name="Matches" type="Node2D" parent="."]
script = ExtResource("7_lb23g")

[connection signal="pressed" from="UI/RegisterContainer/HBoxContainer/AdriButton" to="." method="_on_adri_button_pressed"]
[connection signal="pressed" from="UI/RegisterContainer/HBoxContainer/JackButton" to="." method="_on_jack_button_pressed"]
[connection signal="pressed" from="UI/RegisterContainer/Button" to="." method="_on_join_button_pressed"]
